# RobCoUnified

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  NATIVE_PARITY_AUDIT.md  NATIVE_REWRITE_PLAN.md  PROGRAM_INSTALLER_RESIZE_BUG.md  README.md  RELEASE_NOTES.md  ROBCO_TERMLINK_USER_MANUAL.md  SESSION_HANDOFF.md  USER_MANUAL.md  build.rs
.github/workflows/: release.yml  smoke.yml
ToDo/: robco_writer_integration.md  text_editor_integration.md
ToDo/Donkey Kong/: codex_execution_plan.md  codex_task.md  donkeykong_port_spec.md
ToDo/Donkey Kong/donkey_kong_sprite_sheet_bundle/: README.txt  barrels_sheet.json  codex_execution_plan_spritesheets.md  codex_task_spritesheets.md  donkeykong_port_spec_spritesheets.md  mario_sheet.json  svg_sprite_sheet_guide.md  ui_sheet.json
ToDo/Shaders/: crt_effects_spec.md  crt_shader.wgsl  crt_shader_notes.md  robco_crt_effects_spec.md
assets/: icon.icns
assets/donkey_kong/meta/: effects_sheet.json  level_sheet.json
crates/hosted-addon-contract/: Cargo.toml
crates/hosted-addon-contract/src/: lib.rs
crates/legacy-shell/: Cargo.toml
crates/legacy-shell/src/: main.rs
crates/native-about-app/: Cargo.toml
crates/native-about-app/src/: lib.rs
crates/native-addons-app/: Cargo.toml
crates/native-addons-app/src/: lib.rs
crates/native-connections-app/: Cargo.toml
crates/native-connections-app/src/: lib.rs
crates/native-default-apps-app/: Cargo.toml
crates/native-default-apps-app/src/: lib.rs
crates/native-document-browser-app/: Cargo.toml
crates/native-document-browser-app/src/: lib.rs
crates/native-edit-menus-app/: Cargo.toml
crates/native-edit-menus-app/src/: lib.rs
crates/native-editor-app/: Cargo.toml
crates/native-editor-app/src/: lib.rs
crates/native-file-manager-app/: Cargo.toml
crates/native-file-manager-app/src/: lib.rs
crates/native-installer-app/: Cargo.toml
crates/native-installer-app/src/: lib.rs
crates/native-nuke-codes-app/: Cargo.toml
crates/native-nuke-codes-app/src/: lib.rs
crates/native-programs-app/: Cargo.toml
crates/native-programs-app/src/: lib.rs
crates/native-red-menace-app/: Cargo.toml  README.md
crates/native-red-menace-app/src/: lib.rs  main.rs
crates/native-services/: Cargo.toml
crates/native-services/src/: desktop_connections_service.rs  desktop_default_apps_service.rs  desktop_documents_service.rs  desktop_file_service.rs  desktop_launcher_service.rs  desktop_search_service.rs  desktop_session_service.rs  desktop_settings_service.rs  desktop_shortcuts_service.rs  desktop_surface_service.rs  desktop_user_service.rs  lib.rs  shared_file_manager_settings.rs  shared_types.rs
crates/native-settings-app/: Cargo.toml
crates/native-settings-app/src/: lib.rs
crates/native-shell/: Cargo.toml
crates/native-shell/src/: addons_main.rs  applications_main.rs  editor_main.rs  file_manager_main.rs  iced_main.rs  installer_main.rs  main.rs  nucleon_applications_main.rs  nucleon_files_main.rs  nucleon_installer_main.rs  nucleon_settings_main.rs  nucleon_text_main.rs  nucleon_tweaks_main.rs  nuke_codes_main.rs  settings_main.rs  tweaks_main.rs
crates/native-space-invaders-app/: Cargo.toml  README.md
crates/native-space-invaders-app/src/: lib.rs  main.rs
crates/native-terminal-app/: Cargo.toml
crates/native-terminal-app/src/: lib.rs  user_management.rs
crates/native-tweaks-app/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  connections.rs  default_apps.rs  diag.rs  launcher.rs  lib.rs  pty.rs  session.rs  sound.rs  status.rs  theme.rs  ui.rs
crates/shared/src/core/: auth.rs
crates/shared/src/platform/: addons.rs  catalog.rs  hosted.rs  mod.rs  paths.rs  profile.rs  registry.rs  repository.rs  runtime.rs  shell.rs  state.rs
crates/wasm-addon-sdk/: Cargo.toml
crates/wasm-nuke-codes-addon/: Cargo.toml
crates/wasm-nuke-codes-addon/src/: lib.rs
crates/wasm-red-menace-addon/: Cargo.toml
crates/wasm-zeta-invaders-addon/: Cargo.toml
crates/wasm-zeta-invaders-addon/src/: lib.rs
docs/: CODEX_HANDOFF.md  ICED_MIGRATION_PLAN.md  NATIVE_ROADMAP.md  NEUTRAL_CORE_HANDOFF.md  PHASE0_CODEX_TASK.md  PHASE1_HANDOFF.md  PHASE2_HANDOFF.md  PHASE3A_HANDOFF.md  PHASE3H_HANDOFF.md  PHASE3_HANDOFF.md  PHASE4B_HANDOFF.md  PHASE4_HANDOFF.md  PHASE5_HANDOFF.md  PROJECT_CONTEXT_FOR_LLM.md  RELEASE_CHECKLIST.md  START_HERE_FOR_LLM.md  THEME_PHASE_CODEX_SPEC.md
examples/phase7-sample-theme/: README.md  manifest.json  theme.json
packaging/first-party-addons-repo/: README.md  index.json
packaging/linux/: nucleon-native.desktop  robcos.desktop
packaging/macos/: Info.plist
scripts/: profile_native_desktop.sh  release-check.sh  release-notes-from-changelog.sh
skills/frontend-design/: SKILL.md
src/: apps.rs  auth.rs  boot.rs  checks.rs  config.rs  connections.rs  default_apps.rs  desktop.rs  diag.rs  docedit.rs  documents.rs  hacking.rs  installer.rs  launcher.rs  lib.rs  main.rs  nuke_codes.rs  pty.rs  session.rs  settings.rs  shell_terminal.rs  sound.rs  status.rs  ui.rs
src/core/: auth.rs  hacking.rs  mod.rs
src/legacy/: apps.rs  auth.rs  boot.rs  checks.rs  desktop.rs  documents.rs  hacking.rs  installer.rs  mod.rs  shell_terminal.rs
src/native/: about_screen.rs  addons.rs  addons_standalone.rs  app.rs  applications_standalone.rs  background.rs  builtin_icons.rs  command_layer.rs  connections_screen.rs  data.rs  default_apps_screen.rs  desktop_app.rs  desktop_connections_service.rs  desktop_default_apps_service.rs  desktop_file_service.rs  desktop_launcher_service.rs  desktop_menu_bar.rs  desktop_settings_service.rs  desktop_spotlight.rs  desktop_start_menu.rs  desktop_status_service.rs  desktop_surface.rs  desktop_taskbar.rs  desktop_user_service.rs  desktop_window_mgmt.rs  desktop_wm_widget.rs  document_browser.rs  donkey_kong.rs  edit_menus_screen.rs  editor_app.rs  editor_standalone.rs  file_manager.rs  file_manager_app.rs  file_manager_desktop.rs  file_manager_menu.rs  file_manager_prompt.rs  file_manager_standalone.rs  hacking_screen.rs  hosted_addon_runtime.rs  installer_screen.rs  (+29 more)
src/sounds/: README.md
(+62 files in other folders)
