[workspace]
members = [".", "crates/legacy-shell", "crates/native-services", "crates/native-shell", "crates/shared", "crates/native-editor-app", "crates/native-file-manager-app", "crates/native-terminal-app"]
default-members = [".", "crates/legacy-shell", "crates/native-services", "crates/native-shell", "crates/shared", "crates/native-editor-app", "crates/native-file-manager-app", "crates/native-terminal-app"]
resolver = "2"

[package]
name = "robcos"
version = "0.3.2"
edition = "2021"
description = "RobCoOS — Fallout-style terminal OS in Rust"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Stylith/RobCoUnified"
autobins = false

[dependencies]
ratatui       = "0.29"
crossterm     = { version = "0.28", features = ["event-stream"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
sysinfo       = "0.32"
chrono        = { version = "0.4", features = ["clock"] }
rand          = "0.8"
sha2          = "0.10"
hex           = "0.4"
dirs          = "5"
portable-pty  = "0.8"
vt100         = "0.15"
eframe        = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fontdue       = "0.8"
libc          = "0.2"
resvg         = "0.44"
usvg          = "0.44"
robcos-native-services = { path = "crates/native-services" }
robcos-shared = { path = "crates/shared" }
robcos-native-editor-app = { path = "crates/native-editor-app" }
robcos-native-file-manager-app = { path = "crates/native-file-manager-app" }
robcos-native-terminal-app = { path = "crates/native-terminal-app" }

[build-dependencies]
winres        = "0.1"
image         = { version = "0.25", default-features = false, features = ["png"] }
resvg         = "0.44"
usvg          = "0.44"

[features]
default = []
sound   = []          # enable via: cargo build --features sound

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
