[workspace]
members = [".", "crates/native-services", "crates/native-shell", "crates/shared", "crates/native-editor-app", "crates/native-file-manager-app", "crates/native-terminal-app", "crates/native-installer-app", "crates/native-settings-app", "crates/native-programs-app", "crates/native-default-apps-app", "crates/native-connections-app", "crates/native-edit-menus-app", "crates/native-document-browser-app", "crates/native-about-app", "crates/native-nuke-codes-app"]
default-members = [".", "crates/native-services", "crates/native-shell", "crates/shared", "crates/native-editor-app", "crates/native-file-manager-app", "crates/native-terminal-app", "crates/native-installer-app", "crates/native-settings-app", "crates/native-programs-app", "crates/native-default-apps-app", "crates/native-connections-app", "crates/native-edit-menus-app", "crates/native-document-browser-app", "crates/native-about-app", "crates/native-nuke-codes-app"]
resolver = "2"

[workspace.dependencies]
lru = "0.12"
iced = { version = "0.13", features = ["advanced", "canvas", "image", "tokio"] }
tokio = { version = "1", features = ["time"] }

[package]
name = "robcos"
version = "0.4.4"
edition = "2021"
description = "RobCoOS — Fallout-style terminal OS in Rust"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Stylith/RobCoUnified"
autobins = false

[dependencies]
crossterm     = { version = "0.28", features = ["event-stream"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
sysinfo       = "0.32"
chrono        = { version = "0.4", features = ["clock"] }
rand          = "0.8"
sha2          = "0.10"
hex           = "0.4"
dirs          = "5"
portable-pty  = "0.8"
vt100         = "0.15"
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fontdue       = "0.8"
libc          = "0.2"
lru           = { workspace = true }
iced          = { workspace = true }
tokio         = { workspace = true }
resvg         = "0.44"
usvg          = "0.44"
robcos-native-services = { path = "crates/native-services" }
robcos-shared = { path = "crates/shared" }
robcos-native-editor-app = { path = "crates/native-editor-app" }
robcos-native-file-manager-app = { path = "crates/native-file-manager-app" }
robcos-native-terminal-app = { path = "crates/native-terminal-app" }
robcos-native-installer-app = { path = "crates/native-installer-app" }
robcos-native-settings-app = { path = "crates/native-settings-app" }
robcos-native-programs-app = { path = "crates/native-programs-app" }
robcos-native-default-apps-app = { path = "crates/native-default-apps-app" }
robcos-native-connections-app = { path = "crates/native-connections-app" }
robcos-native-edit-menus-app = { path = "crates/native-edit-menus-app" }
robcos-native-document-browser-app = { path = "crates/native-document-browser-app" }
robcos-native-about-app = { path = "crates/native-about-app" }
robcos-native-nuke-codes-app = { path = "crates/native-nuke-codes-app" }

[build-dependencies]
winres        = "0.1"
image         = { version = "0.25", default-features = false, features = ["png"] }
resvg         = "0.44"
usvg          = "0.44"

[features]
default = []
sound   = []          # enable via: cargo build --features sound

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
