[workspace]
members = [".", "crates/legacy-shell", "crates/native-services", "crates/native-shell", "crates/shared", "crates/native-editor-app", "crates/native-file-manager-app", "crates/native-terminal-app", "crates/native-installer-app", "crates/native-settings-app", "crates/native-tweaks-app", "crates/native-programs-app", "crates/native-default-apps-app", "crates/native-connections-app", "crates/native-edit-menus-app", "crates/native-document-browser-app", "crates/native-about-app", "crates/hosted-addon-contract", "crates/wasm-addon-sdk"]
default-members = [".", "crates/legacy-shell", "crates/native-services", "crates/native-shell", "crates/shared", "crates/native-editor-app", "crates/native-file-manager-app", "crates/native-terminal-app", "crates/native-installer-app", "crates/native-settings-app", "crates/native-tweaks-app", "crates/native-programs-app", "crates/native-default-apps-app", "crates/native-connections-app", "crates/native-edit-menus-app", "crates/native-document-browser-app", "crates/native-about-app", "crates/hosted-addon-contract", "crates/wasm-addon-sdk"]
resolver = "2"

[package]
name = "robcos"
version = "0.4.4"
edition = "2021"
description = "nucleon-core shell/runtime platform"
license = "GPL-3.0-only"
readme = "README.md"
# Keep the current live repo URL until the GitHub rename lands.
repository = "https://github.com/Stylith/nucleon-core"
autobins = false

[dependencies]
ratatui       = "0.29"
crossterm     = { version = "0.28", features = ["event-stream"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
sysinfo       = "0.32"
chrono        = { version = "0.4", features = ["clock"] }
rand          = "0.8"
sha2          = "0.10"
hex           = "0.4"
dirs          = "5"
portable-pty  = "0.8"
vt100         = "0.15"
eframe        = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui-wgpu     = { version = "0.29.1", default-features = false }
egui-winit    = { version = "0.29.1", default-features = false }
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
fontdue       = "0.8"
libc          = "0.2"
resvg         = "0.44"
usvg          = "0.44"
wasmi         = "0.40"
zip           = "2"
tar           = "0.4"
flate2        = "1"
robcos-native-services = { path = "crates/native-services" }
robcos-shared = { path = "crates/shared" }
robcos-native-editor-app = { path = "crates/native-editor-app" }
robcos-native-file-manager-app = { path = "crates/native-file-manager-app" }
robcos-native-terminal-app = { path = "crates/native-terminal-app" }
robcos-native-installer-app = { path = "crates/native-installer-app" }
robcos-native-settings-app = { path = "crates/native-settings-app" }
robcos-native-programs-app = { path = "crates/native-programs-app" }
robcos-native-default-apps-app = { path = "crates/native-default-apps-app" }
robcos-native-connections-app = { path = "crates/native-connections-app" }
robcos-native-edit-menus-app = { path = "crates/native-edit-menus-app" }
robcos-native-document-browser-app = { path = "crates/native-document-browser-app" }
robcos-native-about-app = { path = "crates/native-about-app" }

[build-dependencies]
winres        = "0.1"

[dev-dependencies]
wat = "1"

[features]
default = []
sound   = []          # enable via: cargo build --features sound

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[patch.crates-io]
egui-wgpu = { path = "vendor/egui-wgpu" }
egui-winit = { path = "vendor/egui-winit" }
