[package]
name = "nucleon-native-settings-app"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
nucleon-native-services = { path = "../native-services" }
nucleon-native-terminal-app = { path = "../native-terminal-app" }
nucleon-shared = { path = "../shared" }
