[package]
name = "robcos-native-shell"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "robcos-iced"
path = "src/iced_main.rs"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
iced = { workspace = true }
robcos = { path = "../.." }
