[package]
name = "nucleon-native-shell"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "nucleon-native"
path = "src/main.rs"

[[bin]]
name = "nucleon-files"
path = "src/file_manager_main.rs"

[[bin]]
name = "nucleon-settings"
path = "src/settings_main.rs"

[[bin]]
name = "nucleon-text"
path = "src/editor_main.rs"

[[bin]]
name = "nucleon-applications"
path = "src/applications_main.rs"

[[bin]]
name = "nucleon-installer"
path = "src/installer_main.rs"

[[bin]]
name = "nucleon-tweaks"
path = "src/tweaks_main.rs"

[[bin]]
name = "nucleon-addons"
path = "src/addons_main.rs"

[dependencies]
anyhow = "1"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
nucleon = { path = "../.." }
nucleon-native-addons-app = { path = "../native-addons-app" }
nucleon-native-tweaks-app = { path = "../native-tweaks-app" }
