[package]
name = "robcos-native-zeta-invaders-app"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "robcos-zeta-invaders"
path = "src/main.rs"

[dependencies]
anyhow = "1"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = { version = "0.8", features = ["small_rng"] }
