[package]
name = "robcos-native-zeta-invaders-app"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "robcos-zeta-invaders"
path = "src/main.rs"

[dependencies]
anyhow = "1"
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
robcos-hosted-addon-contract = { path = "../hosted-addon-contract" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
