[package]
name = "nucleon-shared"
version = "0.4.4"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
hex = "0.4"
libc = "0.2"
portable-pty = "0.8"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
vt100 = "0.15"
nucleon-hosted-addon-contract = { path = "../hosted-addon-contract" }
